feat: Core Spring Boot Java implementation