@@ -1,16 +1,48 @@
 package ai.snippetquiz.core_service.service;
 
-import ai.snippetquiz.core_service.dto.request.*;
-import ai.snippetquiz.core_service.dto.response.*;
+import ai.snippetquiz.core_service.dto.request.ContentEntryDto;
+import ai.snippetquiz.core_service.dto.request.CreateQuestionRequest;
+import ai.snippetquiz.core_service.dto.request.CreateQuizDTO;
+import ai.snippetquiz.core_service.dto.request.GenerateQuizRequest;
+import ai.snippetquiz.core_service.dto.request.QuestionOptionRequest;
+import ai.snippetquiz.core_service.dto.response.CheckQuizInProgressResponse;
+import ai.snippetquiz.core_service.dto.response.CreateQuestionResponse;
+import ai.snippetquiz.core_service.dto.response.FindOneQuizResponse;
+import ai.snippetquiz.core_service.dto.response.GetContentEntriesResponse;
+import ai.snippetquiz.core_service.dto.response.QuizInProgressDetails;
 import ai.snippetquiz.core_service.dto.response.QuizQuestionDTOResponse;
-import ai.snippetquiz.core_service.entity.*;
-import ai.snippetquiz.core_service.repository.*;
+import ai.snippetquiz.core_service.dto.response.QuizQuestionOptionDTOResponse;
+import ai.snippetquiz.core_service.dto.response.QuizResponse;
+import ai.snippetquiz.core_service.dto.response.QuizResponseItemDto;
+import ai.snippetquiz.core_service.dto.response.QuizSummaryResponseDto;
+import ai.snippetquiz.core_service.dto.response.UpdateQuizDateResponse;
+import ai.snippetquiz.core_service.dto.response.UpdateQuizResponse;
+import ai.snippetquiz.core_service.entity.ContentType;
+import ai.snippetquiz.core_service.entity.Question;
+import ai.snippetquiz.core_service.entity.QuestionOption;
+import ai.snippetquiz.core_service.entity.Quiz;
+import ai.snippetquiz.core_service.entity.QuizQuestion;
+import ai.snippetquiz.core_service.entity.QuizQuestionOption;
+import ai.snippetquiz.core_service.entity.QuizQuestionResponse;
+import ai.snippetquiz.core_service.entity.QuizStatus;
+import ai.snippetquiz.core_service.entity.QuizTopic;
+import ai.snippetquiz.core_service.entity.Topic;
 import ai.snippetquiz.core_service.exception.NotFoundException;
+import ai.snippetquiz.core_service.repository.ContentBankRepository;
+import ai.snippetquiz.core_service.repository.ContentEntryRepository;
+import ai.snippetquiz.core_service.repository.QuestionOptionRepository;
+import ai.snippetquiz.core_service.repository.QuestionRepository;
+import ai.snippetquiz.core_service.repository.QuizGenerationInstructionRepository;
+import ai.snippetquiz.core_service.repository.QuizQuestionOptionRepository;
+import ai.snippetquiz.core_service.repository.QuizQuestionRepository;
+import ai.snippetquiz.core_service.repository.QuizQuestionResponseRepository;
+import ai.snippetquiz.core_service.repository.QuizRepository;
+import ai.snippetquiz.core_service.repository.QuizTopicRepository;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
-import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.data.domain.Pageable;
+import org.springframework.data.web.PagedModel;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
@@ -49,34 +81,26 @@ public class QuizService {
     }
 
     @Transactional(readOnly = true)
-    public PaginatedQuizzesResponse findAll(UUID userId, int page, int limit) {
-        Pageable pageable = PageRequest.of(page - 1, limit);
-        Page<Quiz> quizPage = quizRepository.findByUserIdOrderByCreatedAtDesc(userId, pageable);
+    public PagedModel<QuizResponse> findAll(UUID userId, Pageable pageable) {
+        var quizPage = quizRepository.findByUserIdOrderByCreatedAtDesc(userId, pageable);
 
-        List<QuizResponse> quizResponses = quizPage.getContent().stream()
-                .map(quiz -> {
-                    List<String> topics = quiz.getQuizTopics() != null ? quiz.getQuizTopics().stream()
-                            .map(QuizTopic::getTopicName)
-                            .collect(Collectors.toList()) : List.of();
+        var quizResponses = quizPage.map(quiz -> {
+            List<String> topics = Objects.nonNull(quiz.getQuizTopics()) ? quiz.getQuizTopics().stream()
+                    .map(QuizTopic::getTopicName)
+                    .toList() : List.of();
 
-                    return new QuizResponse(
-                            quiz.getId().toString(),
-                            quiz.getBankName(),
-                            quiz.getCreatedAt(),
-                            quiz.getQuestionsCount(),
-                            quiz.getQuestionsCompleted(),
-                            getFinalStatus(quiz),
-                            quiz.getContentEntriesCount(),
-                            topics);
-                })
-                .collect(Collectors.toList());
+            return new QuizResponse(
+                    quiz.getId().toString(),
+                    quiz.getBankName(),
+                    quiz.getCreatedAt(),
+                    quiz.getQuestionsCount(),
+                    quiz.getQuestionsCompleted(),
+                    getFinalStatus(quiz),
+                    quiz.getContentEntriesCount(),
+                    topics);
+        });
 
-        return new PaginatedQuizzesResponse(
-                quizResponses,
-                new PaginationInfo(
-                        page,
-                        limit,
-                        quizPage.getTotalElements()));
+        return new PagedModel<>(quizResponses);
     }
 
     @Transactional(readOnly = true)
@@ -133,54 +157,40 @@ public class QuizService {
     }
 
     @Transactional(readOnly = true)
-    public PaginatedQuizResponsesDto findQuizResponses(UUID userId, FindQuizResponsesRequest request) {
-        Long quizId = Long.valueOf(request.getQuizId());
-        Integer page = request.getPage();
-        Integer limit = request.getLimit();
+    public PagedModel<QuizResponseItemDto> findQuizResponses(UUID userId, String quizIdString, Pageable pageable) {
+        var quizId = Long.valueOf(quizIdString);
 
-        // Verify quiz ownership
         quizRepository.findByIdAndUserId(quizId, userId)
                 .orElseThrow(() -> new NotFoundException("Quiz not found or you do not have permission to access it"));
 
-        // Get total count of responses
-        long total = quizQuestionResponseRepository.countByQuizId(quizId);
+        var responsePage = quizQuestionResponseRepository.findByQuiz_IdAndQuiz_UserId(quizId, userId, pageable);
 
-        // Get quiz responses with pagination
-        Pageable pageable = PageRequest.of(page - 1, limit);
-        Page<QuizQuestionResponse> responsePage = quizQuestionResponseRepository
-                .findByQuizIdWithDetailsOrderByCreatedAtDesc(quizId, pageable);
+        var formattedResponses = responsePage.map(response -> {
+            var question = response.getQuizQuestion();
+            var selectedOption = response.getQuizQuestionOption();
 
-        List<QuizResponseItemDto> formattedResponses = responsePage.getContent().stream()
-                .map(response -> {
-                    QuizQuestion question = response.getQuizQuestion();
-                    QuizQuestionOption selectedOption = response.getQuizQuestionOption();
+            return new QuizResponseItemDto(
+                    response.getIsCorrect(),
+                    question != null ? question.getQuestion() : "",
+                    selectedOption != null ? selectedOption.getOptionText() : "",
+                    response.getCorrectAnswer(),
+                    selectedOption != null ? selectedOption.getOptionExplanation() : "",
+                    question != null ? question.getContentEntrySourceUrl() : "");
+        });
 
-                    return new QuizResponseItemDto(
-                            response.getIsCorrect(),
-                            question != null ? question.getQuestion() : "",
-                            selectedOption != null ? selectedOption.getOptionText() : "",
-                            response.getCorrectAnswer(),
-                            selectedOption != null ? selectedOption.getOptionExplanation() : "",
-                            question != null ? question.getContentEntrySourceUrl() : "");
-                })
-                .collect(Collectors.toList());
-
-        PaginationInfo pagination = new PaginationInfo(page, limit, total);
-
-        return new PaginatedQuizResponsesDto(formattedResponses, pagination);
+        return new PagedModel<>(formattedResponses);
     }
 
     @Transactional(readOnly = true)
     public QuizSummaryResponseDto findQuizSummary(Long id, UUID userId) {
-        Quiz quiz = quizRepository.findByIdAndUserIdWithTopics(id, userId)
+        var quiz = quizRepository.findByIdAndUserIdWithTopics(id, userId)
                 .orElseThrow(() -> new NotFoundException("Quiz not found or you do not have permission to access it"));
 
         List<String> topics = quiz.getQuizTopics() != null ? quiz.getQuizTopics().stream()
                 .map(QuizTopic::getTopicName)
                 .collect(Collectors.toList()) : List.of();
 
-        // Get total correct answers count
-        Integer totalCorrectAnswers = quizQuestionResponseRepository.countByQuizIdAndIsCorrect(id, true);
+        var totalCorrectAnswers = quizQuestionResponseRepository.countByQuizIdAndIsCorrect(id, true);
 
         return new QuizSummaryResponseDto(
                 topics,
@@ -196,9 +206,9 @@ public class QuizService {
 
             log.info("Content bank {} validated for user {}", bankId, userId);
 
-            Page<ContentEntry> contentEntryPage = contentEntryRepository.findByContentBankId(bankId,
+            var contentEntryPage = contentEntryRepository.findByContentEntryBanks_ContentBank_Id(bankId,
                     PageRequest.of(0, Integer.MAX_VALUE));
-            List<ContentEntry> contentEntries = contentEntryPage.getContent();
+            var contentEntries = contentEntryPage.getContent();
 
             log.info("Found {} content entries for bankId: {}", contentEntries.size(), bankId);
 
@@ -206,10 +216,10 @@ public class QuizService {
                 log.warn("No content entries found for bankId: {}", bankId);
             }
 
-            List<GetContentEntriesResponse.ContentEntryDto> mappedEntries = new ArrayList<>();
-            int entriesSkipped = 0;
+            var mappedEntries = new ArrayList<GetContentEntriesResponse.ContentEntryDto>();
+            var entriesSkipped = 0;
 
-            for (ContentEntry entry : contentEntries) {
+            for (var entry : contentEntries) {
                 if (entry.getQuestionsGenerated() != null && entry.getQuestionsGenerated()) {
                     entriesSkipped++;
                     continue;
@@ -221,10 +231,10 @@ public class QuizService {
                         entry.getWordCount() != null ? entry.getWordCount() : 0));
             }
 
-            QuizGenerationInstruction instruction = quizGenerationInstructionRepository
+            var instruction = quizGenerationInstructionRepository
                     .findFirstByUserId(userId).orElse(null);
 
-            GetContentEntriesResponse.GenerateQuizRequest request = new GetContentEntriesResponse.GenerateQuizRequest(
+            var request = new GetContentEntriesResponse.GenerateQuizRequest(
                     instruction != null ? instruction.getInstruction() : "",
                     mappedEntries);
 
@@ -237,11 +247,11 @@ public class QuizService {
 
     public UpdateQuizDateResponse updateQuizDate(Long quizId) {
         try {
-            Quiz quiz = quizRepository.findById(quizId)
+            var quiz = quizRepository.findById(quizId)
                     .orElseThrow(() -> new NotFoundException("Quiz not found"));
 
             quiz.setQuestionUpdatedAt(LocalDateTime.now());
-            Quiz updatedQuiz = quizRepository.save(quiz);
+            var updatedQuiz = quizRepository.save(quiz);
 
             log.info("Quiz {} questionUpdatedAt updated to {}", quizId, updatedQuiz.getQuestionUpdatedAt());
 
@@ -254,8 +264,7 @@ public class QuizService {
 
     @Transactional(readOnly = true)
     public CheckQuizInProgressResponse checkQuizInProgress(UUID userId) {
-
-        List<Quiz> inProgressQuizzes = quizRepository.findAllByUserIdAndStatus(userId,
+        var inProgressQuizzes = quizRepository.findAllByUserIdAndStatus(userId,
                 QuizStatus.IN_PROGRESS);
 
         if (inProgressQuizzes.isEmpty()) {
@@ -264,8 +273,8 @@ public class QuizService {
 
         QuizInProgressDetails inProgressQuiz = null;
 
-        for (Quiz quiz : inProgressQuizzes) {
-            String finalStatus = getFinalStatus(quiz);
+        for (var quiz : inProgressQuizzes) {
+            var finalStatus = getFinalStatus(quiz);
 
             if (QuizStatus.PREPARE.equals(quiz.getStatus()) || QuizStatus.IN_PROGRESS.getValue().equals(finalStatus)) {
                 inProgressQuiz = new QuizInProgressDetails(
@@ -280,11 +289,11 @@ public class QuizService {
             }
         }
 
-        return new CheckQuizInProgressResponse(inProgressQuiz != null, inProgressQuiz);
+        return new CheckQuizInProgressResponse(Objects.nonNull(inProgressQuiz), inProgressQuiz);
     }
 
     public void remove(UUID userId, Long id) {
-        Quiz quiz = quizRepository.findByIdAndUserId(id, userId)
+        var quiz = quizRepository.findByIdAndUserId(id, userId)
                 .orElseThrow(() -> new NotFoundException("Quiz not found"));
 
         quizRepository.delete(quiz);
@@ -292,15 +301,13 @@ public class QuizService {
 
     @Transactional
     public String createQuiz(UUID userId, CreateQuizDTO request) {
-        // Find content bank with all related data
-        ContentBank contentBank = contentBankRepository
+        var contentBank = contentBankRepository
                 .findByIdAndUserIdWithContentEntries(request.bankId(), userId)
                 .orElseThrow(() -> new NotFoundException(
                         "Content bank not found or you do not have permission to access it"));
 
         Quiz quiz;
 
-        // Handle existing quiz update or create new quiz
         if (Objects.nonNull(request.quizId())) {
             quiz = quizRepository.findByIdAndUserId(Integer.valueOf(request.quizId()), userId)
                     .orElseThrow(() -> new NotFoundException(
@@ -322,32 +329,28 @@ public class QuizService {
             quiz = quizRepository.save(quiz);
         }
 
-        // Collect all questions from content entries
-        List<Question> allQuestions = contentBank.getContentEntries().stream()
+        var allQuestions = contentBank.getContentEntries().stream()
                 .flatMap(entry -> entry.getQuestions().stream())
                 .collect(Collectors.toList());
 
-        // Collect all unique topics
-        Set<String> allTopics = contentBank.getContentEntries().stream()
+        var allTopics = contentBank.getContentEntries().stream()
                 .flatMap(entry -> entry.getTopics().stream())
                 .map(Topic::getTopic)
                 .collect(Collectors.toSet());
 
         if (allQuestions.isEmpty()) {
-            // Update quiz with entry count but no questions
             quiz.setContentEntriesCount(contentBank.getContentEntries().size());
             quiz.setQuestionsCount(0);
             quizRepository.save(quiz);
             return quiz.getId().toString();
         }
 
-        // Create quiz questions and options
-        List<QuizQuestion> createdQuestions = new ArrayList<>();
+        var createdQuestions = new ArrayList<QuizQuestion>();
 
-        for (Question question : allQuestions) {
-            ContentEntry contentEntry = question.getContentEntry();
+        for (var question : allQuestions) {
+            var contentEntry = question.getContentEntry();
 
-            QuizQuestion quizQuestion = new QuizQuestion();
+            var quizQuestion = new QuizQuestion();
             quizQuestion.setQuestion(question.getQuestion());
             quizQuestion.setType(question.getType());
             quizQuestion.setContentEntryType(
@@ -359,9 +362,8 @@ public class QuizService {
             quizQuestion = quizQuestionRepository.save(quizQuestion);
             createdQuestions.add(quizQuestion);
 
-            // Create quiz question options
-            for (QuestionOption option : question.getQuestionOptions()) {
-                QuizQuestionOption quizOption = new QuizQuestionOption();
+            for (var option : question.getQuestionOptions()) {
+                var quizOption = new QuizQuestionOption();
                 quizOption.setQuizQuestion(quizQuestion);
                 quizOption.setOptionText(option.getOptionText());
                 quizOption.setOptionExplanation(option.getOptionExplanation());
@@ -371,55 +373,47 @@ public class QuizService {
             }
         }
 
-        // Create quiz topics using upsert logic
-        for (String topicName : allTopics) {
-            Optional<QuizTopic> existingTopic = quizTopicRepository
+        for (var topicName : allTopics) {
+            var existingTopic = quizTopicRepository
                     .findByQuizIdAndTopicName(quiz.getId(), topicName);
 
             if (existingTopic.isEmpty()) {
-                QuizTopic quizTopic = new QuizTopic();
+                var quizTopic = new QuizTopic();
                 quizTopic.setQuiz(quiz);
                 quizTopic.setTopicName(topicName);
                 quizTopicRepository.save(quizTopic);
             }
         }
 
-        // Update quiz with final counts
         quiz.setContentEntriesCount(contentBank.getContentEntries().size());
         quiz.setQuestionsCount(createdQuestions.size());
         quizRepository.save(quiz);
-
-        log.info("[createQuiz] Created {} questions for quiz {}",
-                createdQuestions.size(), quiz.getId());
 
         return quiz.getId().toString();
     }
 
     public CreateQuestionResponse createQuestion(CreateQuestionRequest request, UUID userId) {
-        Long contentEntryId = request.contentEntryId();
-        String questionText = request.question();
-        List<QuestionOptionRequest> options = request.options();
+        var contentEntryId = request.contentEntryId();
+        var questionText = request.question();
+        var options = request.options();
 
-        // Verify content entry exists
-        ContentEntry contentEntry = contentEntryRepository.findById(contentEntryId)
+        var contentEntry = contentEntryRepository.findById(contentEntryId)
                 .orElseThrow(() -> new NotFoundException(
                         "Content entry not found or you do not have permission to access it"));
 
-        if (options == null || options.isEmpty()) {
-            log.error("[createQuestion] No options provided for question");
+        if (Objects.isNull(options) || options.isEmpty()) {
+            log.error("No options provided for question");
             return new CreateQuestionResponse("No options provided for question", 0L);
         }
 
-        // Create the question with hardcoded type
-        Question question = new Question();
+        var question = new Question();
         question.setQuestion(questionText);
-        question.setType("multiple_choice"); // Hardcoded as in NestJS
+        question.setType("single_choice");
         question.setContentEntry(contentEntry);
 
-        Question savedQuestion = questionRepository.save(question);
+        var savedQuestion = questionRepository.save(question);
         var quizQuestionOptions = new ArrayList<QuestionOption>();
 
-        // Create question options
         for (QuestionOptionRequest optionRequest : options) {
             QuestionOption option = new QuestionOption();
             option.setQuestion(savedQuestion);
@@ -436,14 +430,12 @@ public class QuizService {
     }
 
     public UpdateQuizResponse updateQuiz(UUID userId, String quizId, String questionOptionId) {
-        Long quizIdLong = Long.parseLong(quizId);
-        Long optionSelectedId = Long.parseLong(questionOptionId);
+        var quizIdLong = Long.parseLong(quizId);
+        var optionSelectedId = Long.parseLong(questionOptionId);
 
-        // Validate if the quiz belongs to the user
-        Quiz quiz = quizRepository.findByIdAndUserIdWithQuestions(quizIdLong, userId)
+        var quiz = quizRepository.findByIdAndUserIdWithQuestions(quizIdLong, userId)
                 .orElseThrow(() -> new NotFoundException("Quiz not found or you do not have permission to access it"));
 
-        // Check if quiz is already completed
         if (quiz.getQuestionsCompleted() >= quiz.getQuestionsCount()) {
             return new UpdateQuizResponse(
                     "Quiz is already completed",
@@ -451,10 +443,9 @@ public class QuizService {
                     false);
         }
 
-        // Get the current question (next question to answer)
-        List<QuizQuestion> sortedQuestions = quiz.getQuizQuestions().stream()
+        var sortedQuestions = quiz.getQuizQuestions().stream()
                 .sorted((q1, q2) -> q1.getId().compareTo(q2.getId()))
-                .collect(Collectors.toList());
+                .toList();
 
         if (quiz.getQuestionsCompleted() >= sortedQuestions.size()) {
             return new UpdateQuizResponse(
@@ -463,17 +454,16 @@ public class QuizService {
                     false);
         }
 
-        QuizQuestion currentQuestion = sortedQuestions.get(quiz.getQuestionsCompleted());
+        var currentQuestion = sortedQuestions.get(quiz.getQuestionsCompleted());
 
-        if (isNull(currentQuestion)) {
+        if (Objects.isNull(currentQuestion)) {
             return new UpdateQuizResponse(
                     "No more questions available",
                     false,
                     false);
         }
 
-        // Validate if the question_option_id exists in the current question's options
-        QuizQuestionOption selectedOption = currentQuestion.getQuizQuestionOptions().stream()
+        var selectedOption = currentQuestion.getQuizQuestionOptions().stream()
                 .filter(option -> option.getId().equals(optionSelectedId))
                 .findFirst()
                 .orElse(null);
@@ -485,13 +475,12 @@ public class QuizService {
                     false);
         }
 
-        // Find the correct answer for this question
-        QuizQuestionOption correctOption = currentQuestion.getQuizQuestionOptions().stream()
+        var correctOption = currentQuestion.getQuizQuestionOptions().stream()
                 .filter(QuizQuestionOption::getIsCorrect)
                 .findFirst()
                 .orElse(null);
 
-        if (isNull(correctOption)) {
+        if (Objects.isNull(correctOption)) {
             log.error("No correct option found for question {}", currentQuestion.getId());
             return new UpdateQuizResponse(
                     "Question configuration error",
@@ -500,7 +489,7 @@ public class QuizService {
         }
 
         // Create a new QuizQuestionResponse
-        QuizQuestionResponse response = new QuizQuestionResponse();
+        var response = new QuizQuestionResponse();
         response.setQuiz(quiz);
         response.setQuizQuestion(currentQuestion);
         response.setQuizQuestionOption(selectedOption);
@@ -511,8 +500,8 @@ public class QuizService {
         quizQuestionResponseRepository.save(response);
 
         // Increment Quiz.questionsCompleted
-        Integer updatedQuestionsCompleted = quiz.getQuestionsCompleted() + 1;
-        boolean isCompleted = updatedQuestionsCompleted >= quiz.getQuestionsCount() &&
+        var updatedQuestionsCompleted = quiz.getQuestionsCompleted() + 1;
+        var isCompleted = updatedQuestionsCompleted >= quiz.getQuestionsCount() &&
                 QuizStatus.READY.equals(quiz.getStatus());
 
         quiz.setQuestionsCompleted(updatedQuestionsCompleted);
@@ -527,17 +516,14 @@ public class QuizService {
                 true, isCompleted);
     }
 
-    public EmitCreateQuizEventResponse emitCreateQuizEvent(String userId, String quizId, Long bankId) {
+    public void emitCreateQuizEvent(String userId, String quizId, Long bankId) {
         try {
-            // Get content entries by bank ID
-            GetContentEntriesResponse contentEntriesResponse = getContentEntriesByBankId(
+            var contentEntriesResponse = getContentEntriesByBankId(
                     bankId.longValue(), UUID.fromString(userId));
 
-            // Extract the GenerateQuizRequest from the response
-            GetContentEntriesResponse.GenerateQuizRequest quizRequest = contentEntriesResponse.request();
-            Integer entriesSkipped = contentEntriesResponse.entriesSkipped();
+            var quizRequest = contentEntriesResponse.request();
+            var entriesSkipped = contentEntriesResponse.entriesSkipped();
 
-            // Emit the Kafka event using the existing KafkaProducerService
             kafkaProducerService.emitCreateQuizEvent(
                     new GenerateQuizRequest(
                             quizRequest.instructions(),
@@ -554,11 +540,6 @@ public class QuizService {
                     entriesSkipped);
 
             log.info("Create quiz event emitted for quizId: {}, bankId: {}, userId: {}", quizId, bankId, userId);
-
-            return new EmitCreateQuizEventResponse(
-                    "Quiz generation event emitted successfully",
-                    entriesSkipped);
-
         } catch (Exception error) {
             log.error("Failed to emit create quiz event for quizId: {}, bankId: {}, userId: {}",
                     quizId, bankId, userId, error);
